# volatix

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: deserialize.rs  main.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  process.rs  resp3.rs  storage.rs
server/tests/: integration.rs
src/: main.rs
tests/: integration.rs
volatix-bench/: Cargo.toml
volatix-bench/src/: main.rs
volatix-cli/: Cargo.toml  readme.md
volatix-cli/src/: deserialize.rs  main.rs  parse.rs  serialize.rs  usage.rs
volatix-core/: Cargo.toml
volatix-core/src/: error.rs  lib.rs  resp3.rs  storage.rs
volatix-server/: Cargo.toml  readme.md
volatix-server/src/: .process.rs.swp  error.rs  lib.rs  main.rs  process.rs  resp3.rs  storage.rs
volatix_bench/: Cargo.toml
volatix_bench/src/: main.rs
volatix_cli/: Cargo.toml  readme.md
volatix_cli/src/: deserialize.rs  main.rs  parse.rs  usage.rs
volatix_core/: Cargo.toml
volatix_core/src/: error.rs  lib.rs  resp3.rs  storage.rs
volatix_server/: Cargo.toml  readme.md
volatix_server/src/: main.rs  process.rs
