[package]
name = "volatix"
description = "An in memory database"
readme = "README.md"
version = "0.1.0"
edition = "2024"
authors = ["Juan Milkah <juanmilkah@gmail.com>"]
license = "MIT"

[workspace]
members = ["volatix-server", "volatix-cli", "volatix-bench"]

[[bin]]
name = "volatix-server"
path = "volatix-server/src/main.rs"

[[bin]]
name ="volatix-cli"
path = "volatix-cli/src/main.rs"

[lib]
name = "libvolatix"
path = "volatix-server/src/lib.rs"

[[bin]]
name = "volatix-bench"
path = "volatix-bench/src/main.rs"

[workspace.dependencies]
anyhow = "1.0.98"
bincode2 = "2.0.1"
clap = { version = "4.5.43", features = ["derive"] }
crossterm = "0.29.0"
ctrlc = "3.4.7"
flate2 = "1.1.2"
parking_lot = "0.12.4"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }

[dependencies]
anyhow = {workspace = true}
bincode2 = {workspace = true}
clap = {workspace = true}
crossterm = {workspace = true}
ctrlc = {workspace = true}
flate2 = {workspace = true}
parking_lot = {workspace = true}
rand = {workspace = true}
serde = {workspace = true}
tokio = {workspace = true}

[profile.release]
# debug = true
strip = true
lto = "thin"
opt-level = 3
# codegen-units = 1
