[package]
authors = ["Juan Milkah <juanmilkah@gmail.com>"]
description = "An in memory database"
edition = "2024"
license = "MIT"
name = "volatix"
readme = "README.md"
version = "0.1.0"

[workspace]
members = ["volatix-server", "volatix-cli", "volatix-bench", "volatix-core"]

[[bin]]
name = "volatix-server"
path = "volatix-server/src/main.rs"

[[bin]]
name = "volatix-cli"
path = "volatix-cli/src/main.rs"

[lib]
name = "libvolatix"
path = "volatix-core/src/lib.rs"

[[bin]]
name = "volatix-bench"
path = "volatix-bench/src/main.rs"

[workspace.dependencies]
anyhow = "1.0.98"
bincode2 = "2.0.1"
clap = { version = "4.5.43", features = ["derive"] }
crossterm = "0.29.0"
ctrlc = "3.4.7"
flate2 = "1.1.2"
libvolatix = { path = "volatix-server" }
parking_lot = "0.12.4"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }

[dependencies]
anyhow = { workspace = true }
bincode2 = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
ctrlc = { workspace = true }
flate2 = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

[profile.release]
incremental = true
lto = true
opt-level = 3
strip = "debuginfo"

[profile.dev]
debug = true
panic = "unwind"
opt-level = 3
lto = true
